data/derived/comb/progs/unify/prog1909.ml.out
Characters 125-138:
  else if (List.tl lst) == (List.hd lst) then
                           ^^^^^^^^^^^^^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
